this is a commit

--- a/Mission06_OliverEscobar/Mission06_OliverEscobar.csproj
+++ b/Mission06_OliverEscobar/Mission06_OliverEscobar.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="JoelHiltonMovieCollection.sqlite" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="wwwroot\Joel.png" />
   </ItemGroup>
 
