--- a/Mission06_OliverEscobar/appsettings.json
+++ b/Mission06_OliverEscobar/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "HiltonMovies": "Data Source = HiltonMovies.sqlite"
+    "HiltonMovies": "Data Source = JoelHiltonMovieCollection.sqlite"
   }
 }
